--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 <p>putra dari bpk. lorem <br> dan <br> ibu ipsum</p>
                             </div>
                             <div class="col-4">
-                                <img src="img/WhatsApp Image 2024-09-12 at 10.39.37.jpeg" alt="..." class="img-responsive rounded-circle">
+                                <img src="WhatsApp Image 2024-09-12 at 10.39.37.jpeg" alt="..." class="img-responsive rounded-circle">
                             </div>
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                     <div class="col-lg-6">
                         <div class="row">
                             <div class="col-4">
-                                <img src="img/nico.jpg" alt="..." class="img-responsive rounded-circle">
+                                <img src="nico.jpg" alt="..." class="img-responsive rounded-circle">
                             </div>
                             <div class="col-8">
                                 <h3>freya</h3>
